--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "2",
-    "@tanstack/react-query": "5.17.9",
+    "@tanstack/react-query": "^5.90.12",
     "jose": "5.2.4",
     "jszip": "3.10.1",
     "lucide-react": "^0.559.0",
