chore: security audit fixes, docker verification, and updated documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,14 @@
     },
     "allowImportingTsExtensions": true,
     "noEmit": true
-  }
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "copy-of-copy-of-seo-content-1208 (2)"
+  ]
 }
