--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.948.0",
-    "@supabase/supabase-js": "2",
+    "@supabase/supabase-js": "^2.47.0",
     "@tanstack/react-query": "^5.90.12",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.3.1",
-    "jose": "5.2.4",
-    "jszip": "3.10.1",
+    "jose": "^5.2.4",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.559.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-hot-toast": "2.4.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.10.1",
-    "zod": "3.22.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
