--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.10.1",
+    "remark-gfm": "^4.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
