--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
       - DATAFORSEO_LOGIN=${DATAFORSEO_LOGIN}
       - DATAFORSEO_PASSWORD=${DATAFORSEO_PASSWORD}
+      # R2 Storage
+      - R2_ACCESS_KEY_ID=${R2_ACCESS_KEY_ID}
+      - R2_SECRET_ACCESS_KEY=${R2_SECRET_ACCESS_KEY}
+      - CLOUDFLARE_ACCOUNT_ID=${CLOUDFLARE_ACCOUNT_ID}
+      - R2_BUCKET_NAME=${R2_BUCKET_NAME}
       # - OPENAI_API_KEY=${OPENAI_API_KEY}
     networks:
       - internal-net
