fix: resolve proxy 404, simplify proxy logic, and cleanup services

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
 
     # 2. API 转发
     location /api/ {
-        proxy_pass http://backend:8000/api/; # 注意 trailing slash
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_read_timeout 300s;
